--- a/japanese/mozc-server/Makefile.MASTER_SITES
+++ b/japanese/mozc-server/Makefile.MASTER_SITES
@@ -2,6 +2,8 @@ MASTER_SITES+=	https://github.com/bazelbuild/apple_support/releases/download/1.1
 DISTFILES+=	apple_support.1.16.0.tar.gz:apple_support
 MASTER_SITES+=	https://github.com/bazel-contrib/bazel_features/releases/download/v1.11.0/:bazel_features
 DISTFILES+=	bazel_features-v1.11.0.tar.gz:bazel_features
+MASTER_SITES+=	https://github.com/bazel-contrib/bazel-lib/releases/download/v1.40.3/:bazel_lib
+DISTFILES+=	bazel-lib-v1.40.3.tar.gz:bazel_lib
 MASTER_SITES+=	https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/:bazel_skylib
 DISTFILES+=	bazel-skylib-1.7.1.tar.gz:bazel_skylib
 MASTER_SITES+=	https://github.com/open-source-parsers/jsoncpp/archive/refs/tags/:jsoncpp
@@ -20,21 +22,33 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_apple/releases/download/3.5.1
 DISTFILES+=	rules_apple.3.5.1.tar.gz:rules_apple
 MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/:rules_cc
 DISTFILES+=	rules_cc-0.0.9.tar.gz:rules_cc
+MASTER_SITES+=	https://github.com/bazelbuild/rules_go/releases/download/v0.39.1/:rules_go
+DISTFILES+=	rules_go-v0.39.1.zip:rules_go
 MASTER_SITES+=	https://github.com/bazelbuild/rules_java/releases/download/7.9.0/:rules_java
 DISTFILES+=	rules_java-7.9.0.tar.gz:rules_java
 MASTER_SITES+=	https://github.com/bazelbuild/rules_jvm_external/releases/download/5.1/:rules_jvm_external
 DISTFILES+=	rules_jvm_external-5.1.tar.gz:rules_jvm_external
-MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.7/:rules_license
-DISTFILES+=	rules_license-0.0.7.tar.gz:rules_license
+MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.7/:rules_license_007
+DISTFILES+=	rules_license-0.0.7.tar.gz:rules_license_007
+MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.8/:rules_license_008
+DISTFILES+=	rules_license-0.0.8.tar.gz:rules_license_008
+MASTER_SITES+=	https://github.com/bazelbuild/rules_nodejs/releases/download/5.8.2/:rules_nodejs
+DISTFILES+=	rules_nodejs-core-5.8.2.tar.gz:rules_nodejs
 MASTER_SITES+=	https://github.com/bazelbuild/rules_pkg/releases/download/0.7.0/:rules_pkg
 DISTFILES+=	rules_pkg-0.7.0.tar.gz:rules_pkg
 MASTER_SITES+=	https://github.com/bazelbuild/rules_proto/releases/download/6.0.0-rc1/:rules_proto
 DISTFILES+=	rules_proto-6.0.0-rc1.tar.gz:rules_proto
 MASTER_SITES+=	https://github.com/bazelbuild/rules_python/releases/download/0.34.0/:rules_python
 DISTFILES+=	rules_python-0.34.0.tar.gz:rules_python
+MASTER_SITES+=	https://github.com/bazelbuild/rules_rust/releases/download/0.45.1/:rules_rust
+DISTFILES+=	rules_rust-v0.45.1.tar.gz:rules_rust
 MASTER_SITES+=	https://github.com/bazelbuild/rules_swift/releases/download/1.18.0/:rules_swift
 DISTFILES+=	rules_swift.1.18.0.tar.gz:rules_swift
 MASTER_SITES+=	https://github.com/bazelbuild/stardoc/releases/download/0.5.3/:stardoc
 DISTFILES+=	stardoc-0.5.3.tar.gz:stardoc
+MASTER_SITES+=	https://github.com/bufbuild/rules_buf/archive/:rules_buf
+DISTFILES+=	abbbfce7c3fccf1d4b87afa28140d9ce53f80057.zip:rules_buf
+MASTER_SITES+=	https://github.com/bufbuild/buf/releases/download/v1.27.0/:buf_sha256
+DISTFILES+=	sha256.txt:buf_sha256
 MASTER_SITES+=	https://github.com/madler/zlib/releases/download/v1.3.1/:zlib
 DISTFILES+=	zlib-1.3.1.tar.gz:zlib
