--- a/japanese/mozc-server/files/patch-src_MODULE.bazel
+++ b/japanese/mozc-server/files/patch-src_MODULE.bazel
@@ -1,16 +1,8 @@
 --- src/MODULE.bazel.orig	2024-12-04 11:24:26 UTC
 +++ src/MODULE.bazel
-@@ -48,6 +48,7 @@ bazel_dep(
-     name = "rules_python",
-     version = "0.34.0",
- )
-+register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
- 
- # Bazel macOS build (3.5.1 2024-04-09)
- # Note, versions after 3.5.1 result a build failure of universal binary.
-@@ -71,6 +72,12 @@ bazel_dep(
-     name = "rules_java",
-     version = "7.9.0",
+@@ -18,6 +18,12 @@ local_path_override(
+     module_name = "protobuf",
+     path = "third_party/protobuf",
  )
 +single_version_override(
 +    module_name = "rules_buf",
@@ -19,8 +11,16 @@
 +    ],
 +)
  
- # Android NDK rules (0.1.2 2024-07-23)
- # https://github.com/bazelbuild/rules_android_ndk
+ bazel_dep(
+     name = "googletest",
+@@ -48,6 +54,7 @@ bazel_dep(
+     name = "rules_python",
+     version = "0.34.0",
+ )
++#register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
+ 
+ # Bazel macOS build (3.5.1 2024-04-09)
+ # Note, versions after 3.5.1 result a build failure of universal binary.
 @@ -128,11 +135,13 @@ pkg_config_repository(
  )
  
