only rules_license-0.0.8

--- a/japanese/mozc-server/Makefile.MASTER_SITES
+++ b/japanese/mozc-server/Makefile.MASTER_SITES
@@ -28,10 +28,8 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_java/releases/download/7.9.0/
 DISTFILES+=	rules_java-7.9.0.tar.gz:rules_java
 MASTER_SITES+=	https://github.com/bazelbuild/rules_jvm_external/releases/download/5.1/:rules_jvm_external
 DISTFILES+=	rules_jvm_external-5.1.tar.gz:rules_jvm_external
-MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.7/:rules_license_007
-DISTFILES+=	rules_license-0.0.7.tar.gz:rules_license_007
-MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.8/:rules_license_008
-DISTFILES+=	rules_license-0.0.8.tar.gz:rules_license_008
+MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/0.0.8/:rules_license
+DISTFILES+=	rules_license-0.0.8.tar.gz:rules_license
 MASTER_SITES+=	https://github.com/bazelbuild/rules_nodejs/releases/download/5.8.2/:rules_nodejs
 DISTFILES+=	rules_nodejs-core-5.8.2.tar.gz:rules_nodejs
 MASTER_SITES+=	https://github.com/bazelbuild/rules_pkg/releases/download/0.7.0/:rules_pkg
