--- a/japanese/mozc-server/Makefile.MASTER_SITES
+++ b/japanese/mozc-server/Makefile.MASTER_SITES
@@ -20,14 +20,12 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_android_ndk/releases/download
 DISTFILES+=	rules_android_ndk-v0.1.2.tar.gz:rules_android_ndk
 MASTER_SITES+=	https://github.com/bazelbuild/rules_apple/releases/download/3.16.1/:rules_apple
 DISTFILES+=	rules_apple.3.16.1.tar.gz:rules_apple
-MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/:rules_cc_009
-DISTFILES+=	rules_cc-0.0.9.tar.gz:rules_cc_009
-MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.16/:rules_cc_0016
-DISTFILES+=	rules_cc-0.0.16.tar.gz:rules_cc_0016
+MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.16/:rules_cc
+DISTFILES+=	rules_cc-0.0.16.tar.gz:rules_cc
 MASTER_SITES+=	https://github.com/bazelbuild/rules_fuzzing/releases/download/v0.5.2/:rules_fuzzing
 DISTFILES+=	rules_fuzzing-0.5.2.zip:rules_fuzzing
-MASTER_SITES+=	https://github.com/bazelbuild/rules_java/releases/download/8.5.1/:rules_java
-DISTFILES+=	rules_java-8.5.1.tar.gz:rules_java
+MASTER_SITES+=	https://github.com/bazelbuild/rules_java/releases/download/8.6.1/:rules_java
+DISTFILES+=	rules_java-8.6.1.tar.gz:rules_java
 MASTER_SITES+=	https://github.com/bazelbuild/rules_jvm_external/releases/download/6.3/:rules_jvm_external
 DISTFILES+=	rules_jvm_external-6.3.tar.gz:rules_jvm_external
 MASTER_SITES+=	https://github.com/bazelbuild/rules_kotlin/releases/download/v1.9.6/:rules_kotlin
@@ -36,13 +34,17 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/1.0
 DISTFILES+=	rules_license-1.0.0.tar.gz:rules_license
 MASTER_SITES+=	https://github.com/bazelbuild/rules_pkg/releases/download/1.0.1/:rules_pkg
 DISTFILES+=	rules_pkg-1.0.1.tar.gz:rules_pkg
-MASTER_SITES+=	https://github.com/bazelbuild/rules_proto/releases/download/6.0.2/:rules_proto
-DISTFILES+=	rules_proto-6.0.2.tar.gz:rules_proto
+MASTER_SITES+=	https://github.com/bazelbuild/rules_proto/releases/download/7.0.2/:rules_proto
+DISTFILES+=	rules_proto-7.0.2.tar.gz:rules_proto
 MASTER_SITES+=	https://github.com/bazelbuild/rules_python/releases/download/1.0.0/:rules_python
 DISTFILES+=	rules_python-1.0.0.tar.gz:rules_python
 MASTER_SITES+=	https://github.com/bazelbuild/rules_shell/releases/download/v0.2.0/:rules_shell
 DISTFILES+=	rules_shell-v0.2.0.tar.gz:rules_shell
 MASTER_SITES+=	https://github.com/bazelbuild/rules_swift/releases/download/2.1.1/:rules_swift
 DISTFILES+=	rules_swift.2.1.1.tar.gz:rules_swift
+MASTER_SITES+=	https://github.com/bazelbuild/stardoc/releases/download/0.7.2/:stardoc
+DISTFILES+=	stardoc-0.7.2.tar.gz:stardoc
+MASTER_SITES+=	https://github.com/apple/swift-argument-parser/archive/refs/tags/:swift_argument_parser
+DISTFILES+=	1.3.1.tar.gz:swift_argument_parser
 MASTER_SITES+=	https://github.com/madler/zlib/releases/download/v1.3.1/:zlib
 DISTFILES+=	zlib-1.3.1.tar.gz:zlib
