--- a/japanese/mozc-server/Makefile.MASTER_SITES
+++ b/japanese/mozc-server/Makefile.MASTER_SITES
@@ -1,25 +1,29 @@
-MASTER_SITES+=	https://github.com/abseil/abseil-cpp/releases/download/20240722.0/:abseil_cpp
-DISTFILES+=	abseil-cpp-20240722.0.tar.gz:abseil_cpp
+MASTER_SITES+=	https://github.com/abseil/abseil-cpp/releases/download/20250127.0/:abseil_cpp
+DISTFILES+=	abseil-cpp-20250127.0.tar.gz:abseil_cpp
 MASTER_SITES+=	https://github.com/bazelbuild/apple_support/releases/download/1.16.0/:apple_support
 DISTFILES+=	apple_support.1.16.0.tar.gz:apple_support
 MASTER_SITES+=	https://github.com/bazel-contrib/bazel_features/releases/download/v1.21.0/:bazel_features
 DISTFILES+=	bazel_features-v1.21.0.tar.gz:bazel_features
 MASTER_SITES+=	https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/:bazel_skylib
 DISTFILES+=	bazel-skylib-1.7.1.tar.gz:bazel_skylib
+MASTER_SITES+=	https://github.com/google/googletest/releases/download/v1.16.0/:googletest
+DISTFILES+=	googletest-1.16.0.tar.gz:googletest
 MASTER_SITES+=	https://github.com/open-source-parsers/jsoncpp/archive/refs/tags/:jsoncpp
 DISTFILES+=	1.9.5.tar.gz:jsoncpp
 MASTER_SITES+=	https://github.com/nlohmann/json/releases/download/v3.6.1/:json
 DISTFILES+=	include.zip:json
 MASTER_SITES+=	https://github.com/bazelbuild/platforms/releases/download/0.0.10/:platforms
 DISTFILES+=	platforms-0.0.10.tar.gz:platforms
+MASTER_SITES+=	https://github.com/protocolbuffers/protobuf/releases/download/v29.3/:protobuf
+DISTFILES+=	protobuf-29.3.zip:protobuf
 MASTER_SITES+=	https://github.com/pybind/pybind11_bazel/releases/download/v2.12.0/:pybind11_bazel
 DISTFILES+=	pybind11_bazel-2.12.0.zip:pybind11_bazel
 MASTER_SITES+=	https://github.com/google/re2/releases/download/2024-07-02/:re2
 DISTFILES+=	re2-2024-07-02.zip:re2
 MASTER_SITES+=	https://github.com/bazelbuild/rules_android/archive/refs/tags/:rules_android
 DISTFILES+=	v0.1.1.tar.gz:rules_android
-MASTER_SITES+=	https://github.com/bazelbuild/rules_android_ndk/releases/download/v0.1.2/:rules_android_ndk
-DISTFILES+=	rules_android_ndk-v0.1.2.tar.gz:rules_android_ndk
+MASTER_SITES+=	https://github.com/bazelbuild/rules_android_ndk/releases/download/v0.1.3/:rules_android_ndk
+DISTFILES+=	rules_android_ndk-v0.1.3.tar.gz:rules_android_ndk
 MASTER_SITES+=	https://github.com/bazelbuild/rules_apple/releases/download/3.16.1/:rules_apple
 DISTFILES+=	rules_apple.3.16.1.tar.gz:rules_apple
 MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.17/:rules_cc
