--- a/japanese/mozc-server/files/patch-src_MODULE.bazel
+++ b/japanese/mozc-server/files/patch-src_MODULE.bazel
@@ -26,7 +26,7 @@
      ],
  )
  
-@@ -296,16 +299,16 @@ http_archive(
+@@ -296,16 +299,23 @@ http_archive(
  )
  
  # Zip code (2025-01-12)
@@ -49,3 +49,10 @@
  )
 +
 +register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")
++
++single_version_override(
++    module_name = "rules_buf",
++    patches = [
++      "//:rules_buf.patch",
++    ],
++)
