Fix error in rules_rust

--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -198,6 +198,8 @@ post-patch:
 			-e 's,ByteSize\(,ByteSizeLong\(,g;' {} \;
 	@${CP} ${PATCHDIR}/extra-patch-rules_buf+_buf_internal_toolchain.bzl \
 		${BAZEL_WRKSRC}/rules_buf.patch
+	@${CP} ${PATCHDIR}/extra-patch-rules_rust+_rust_platform_triple.bzl \
+		${BAZEL_WRKSRC}/rules_rust.patch
 
 .if ${BUILD_MOZC_LIST:Mfcitx_mozc} == "fcitx_mozc"
 	${REINPLACE_CMD} 's,/po/mo},%po}mo,g' \
