--- a/japanese/mozc-server/files/patch-src_MODULE.bazel
+++ b/japanese/mozc-server/files/patch-src_MODULE.bazel
@@ -26,7 +26,7 @@
      ],
  )
  
-@@ -296,16 +299,23 @@ http_archive(
+@@ -296,16 +299,30 @@ http_archive(
  )
  
  # Zip code (2025-01-12)
@@ -54,5 +54,12 @@
 +    module_name = "rules_buf",
 +    patches = [
 +      "//:rules_buf.patch",
++    ],
++)
++
++single_version_override(
++    module_name = "rules_rust",
++    patches = [
++      "//:rules_rust.patch",
 +    ],
 +)
