--- a/japanese/mozc-server/Makefile.MASTER_SITES
+++ b/japanese/mozc-server/Makefile.MASTER_SITES
@@ -1,29 +1,21 @@
-MASTER_SITES+=	https://github.com/abseil/abseil-cpp/releases/download/20250127.0/:abseil_cpp
-DISTFILES+=	abseil-cpp-20250127.0.tar.gz:abseil_cpp
+MASTER_SITES+=	https://github.com/abseil/abseil-cpp/releases/download/20240722.0/:abseil_cpp
+DISTFILES+=	abseil-cpp-20240722.0.tar.gz:abseil_cpp
 MASTER_SITES+=	https://github.com/bazelbuild/apple_support/releases/download/1.16.0/:apple_support
 DISTFILES+=	apple_support.1.16.0.tar.gz:apple_support
-MASTER_SITES+=	https://github.com/aspect-build/bazel-lib/releases/download/v1.40.3/:bazel_lib
-DISTFILES+=	bazel-lib-v1.40.3.tar.gz:bazel_lib
-MASTER_SITES+=	https://github.com/aspect-build/rules_js/releases/download/v1.39.0/:rules_js
-DISTFILES+=	rules_js-v1.39.0.tar.gz:rules_js
-MASTER_SITES+=	https://github.com/aspect-build/rules_lint/releases/download/v0.12.0/:rules_lint
-DISTFILES+=	rules_lint-v0.12.0.tar.gz:rules_lint
-MASTER_SITES+=	https://github.com/bazel-contrib/bazel_features/releases/download/v1.23.0/:bazel_features
-DISTFILES+=	bazel_features-v1.23.0.tar.gz:bazel_features
+MASTER_SITES+=	https://github.com/bazel-contrib/bazel_features/releases/download/v1.21.0/:bazel_features
+DISTFILES+=	bazel_features-v1.21.0.tar.gz:bazel_features
 MASTER_SITES+=	https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/:bazel_skylib
 DISTFILES+=	bazel-skylib-1.7.1.tar.gz:bazel_skylib
-MASTER_SITES+=	https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.30.0/:bazel_gazelle
-DISTFILES+=	bazel-gazelle-v0.30.0.tar.gz:bazel_gazelle
-MASTER_SITES+=	https://github.com/google/googletest/releases/download/v1.16.0/:googletest
-DISTFILES+=	googletest-1.16.0.tar.gz:googletest
+MASTER_SITES+=	https://github.com/google/googletest/releases/download/v1.15.2/:googletest
+DISTFILES+=	googletest-1.15.2.tar.gz:googletest
 MASTER_SITES+=	https://github.com/open-source-parsers/jsoncpp/archive/refs/tags/:jsoncpp
-DISTFILES+=	1.9.6.tar.gz:jsoncpp
+DISTFILES+=	1.9.5.tar.gz:jsoncpp
 MASTER_SITES+=	https://github.com/nlohmann/json/releases/download/v3.6.1/:json
 DISTFILES+=	include.zip:json
 MASTER_SITES+=	https://github.com/bazelbuild/platforms/releases/download/0.0.10/:platforms
 DISTFILES+=	platforms-0.0.10.tar.gz:platforms
-MASTER_SITES+=	https://github.com/protocolbuffers/protobuf/releases/download/v30.0-rc1/:protobuf
-DISTFILES+=	protobuf-30.0-rc1.zip:protobuf
+MASTER_SITES+=	https://github.com/protocolbuffers/protobuf/releases/download/v29.3/:protobuf
+DISTFILES+=	protobuf-29.3.zip:protobuf
 MASTER_SITES+=	https://github.com/pybind/pybind11_bazel/releases/download/v2.12.0/:pybind11_bazel
 DISTFILES+=	pybind11_bazel-2.12.0.zip:pybind11_bazel
 MASTER_SITES+=	https://github.com/google/re2/releases/download/2024-07-02/:re2
@@ -34,14 +26,10 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_android_ndk/releases/download
 DISTFILES+=	rules_android_ndk-v0.1.3.tar.gz:rules_android_ndk
 MASTER_SITES+=	https://github.com/bazelbuild/rules_apple/releases/download/3.16.1/:rules_apple
 DISTFILES+=	rules_apple.3.16.1.tar.gz:rules_apple
-MASTER_SITES+=	https://github.com/bufbuild/rules_buf/archive/:rules_buf
-DISTFILES+=	abbbfce7c3fccf1d4b87afa28140d9ce53f80057.zip:rules_buf
 MASTER_SITES+=	https://github.com/bazelbuild/rules_cc/releases/download/0.0.17/:rules_cc
 DISTFILES+=	rules_cc-0.0.17.tar.gz:rules_cc
 MASTER_SITES+=	https://github.com/bazelbuild/rules_fuzzing/releases/download/v0.5.2/:rules_fuzzing
 DISTFILES+=	rules_fuzzing-0.5.2.zip:rules_fuzzing
-MASTER_SITES+=	https://github.com/bazelbuild/rules_go/releases/download/v0.39.1/:rules_go
-DISTFILES+=	rules_go-v0.39.1.zip:rules_go
 MASTER_SITES+=	https://github.com/bazelbuild/rules_java/releases/download/8.6.1/:rules_java
 DISTFILES+=	rules_java-8.6.1.tar.gz:rules_java
 MASTER_SITES+=	https://github.com/bazelbuild/rules_jvm_external/releases/download/6.3/:rules_jvm_external
@@ -50,16 +38,12 @@ MASTER_SITES+=	https://github.com/bazelbuild/rules_kotlin/releases/download/v1.9
 DISTFILES+=	rules_kotlin-v1.9.6.tar.gz:rules_kotlin
 MASTER_SITES+=	https://github.com/bazelbuild/rules_license/releases/download/1.0.0/:rules_license
 DISTFILES+=	rules_license-1.0.0.tar.gz:rules_license
-MASTER_SITES+=	https://github.com/bazelbuild/rules_nodejs/releases/download/5.8.2/:rules_nodejs
-DISTFILES+=	rules_nodejs-core-5.8.2.tar.gz:rules_nodejs
 MASTER_SITES+=	https://github.com/bazelbuild/rules_pkg/releases/download/1.0.1/:rules_pkg
 DISTFILES+=	rules_pkg-1.0.1.tar.gz:rules_pkg
 MASTER_SITES+=	https://github.com/bazelbuild/rules_proto/releases/download/7.0.2/:rules_proto
 DISTFILES+=	rules_proto-7.0.2.tar.gz:rules_proto
 MASTER_SITES+=	https://github.com/bazelbuild/rules_python/releases/download/1.0.0/:rules_python
 DISTFILES+=	rules_python-1.0.0.tar.gz:rules_python
-MASTER_SITES+=	https://github.com/bazelbuild/rules_rust/releases/download/0.51.0/:rules_rust
-DISTFILES+=	rules_rust-v0.51.0.tar.gz:rules_rust
 MASTER_SITES+=	https://github.com/bazelbuild/rules_shell/releases/download/v0.2.0/:rules_shell
 DISTFILES+=	rules_shell-v0.2.0.tar.gz:rules_shell
 MASTER_SITES+=	https://github.com/bazelbuild/rules_swift/releases/download/2.1.1/:rules_swift
