--- a/japanese/mozc-server/files/patch-src_MODULE.bazel
+++ b/japanese/mozc-server/files/patch-src_MODULE.bazel
@@ -1,6 +1,6 @@
---- src/MODULE.bazel.orig	2025-01-21 06:39:26 UTC
+--- src/MODULE.bazel.orig	2025-03-10 03:54:24 UTC
 +++ src/MODULE.bazel
-@@ -155,11 +155,13 @@ pkg_config_repository(
+@@ -172,11 +172,13 @@ pkg_config_repository(
  )
  
  # Fcitx
@@ -18,7 +18,7 @@
  )
  
  # Fcitx 5
-@@ -178,6 +180,7 @@ pkg_config_repository(
+@@ -195,6 +197,7 @@ pkg_config_repository(
          "Qt6Core",
          "Qt6Gui",
          "Qt6Widgets",
@@ -26,16 +26,16 @@
      ],
  )
  
-@@ -296,16 +299,30 @@ http_archive(
+@@ -313,16 +316,30 @@ http_archive(
  )
  
- # Zip code (2025-01-12)
+ # Zip code (2025-01-12, ba167e0bd99ee9705e40a747c7358f425511f78a)
 -http_archive(
 +new_local_repository(
      name = "zip_code_ken_all",
      build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
 -    sha256 = "8736e6a331be40582cfbd86e77c29b6efdbc8425052877e235c8a3c1f7190150",
--    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/refs/heads/main/ken_all.zip",
+-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/ba167e0bd99ee9705e40a747c7358f425511f78a/ken_all.zip",
 +    path = "third_party",
  )
  
@@ -44,7 +44,7 @@
      name = "zip_code_jigyosyo",
      build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
 -    sha256 = "0e62af72f56a3039409dc105057051df0e374c2e373a2a068172daaaa1a9af13",
--    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/refs/heads/main/jigyosyo.zip",
+-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/ba167e0bd99ee9705e40a747c7358f425511f78a/jigyosyo.zip",
 +    path = "third_party",
  )
 +
