--- a/japanese/mozc-server/files/patch-src_MODULE.bazel
+++ b/japanese/mozc-server/files/patch-src_MODULE.bazel
@@ -1,4 +1,4 @@
---- src/MODULE.bazel.orig	2025-03-10 03:54:24 UTC
+--- src/MODULE.bazel.orig	2025-03-12 00:39:24 UTC
 +++ src/MODULE.bazel
 @@ -172,11 +172,13 @@ pkg_config_repository(
  )
@@ -26,16 +26,16 @@
      ],
  )
  
-@@ -313,16 +316,30 @@ http_archive(
- )
- 
- # Zip code (2025-01-12, ba167e0bd99ee9705e40a747c7358f425511f78a)
+@@ -318,16 +321,30 @@ http_archive(
+ # The data files are mirror of the following files.
+ # * https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/ken_all.zip
+ # * https://www.post.japanpost.jp/zipcode/dl/jigyosyo/zip/jigyosyo.zip
 -http_archive(
 +new_local_repository(
      name = "zip_code_ken_all",
      build_file_content = "exports_files([\"KEN_ALL.CSV\"])",
--    sha256 = "8736e6a331be40582cfbd86e77c29b6efdbc8425052877e235c8a3c1f7190150",
--    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/ba167e0bd99ee9705e40a747c7358f425511f78a/ken_all.zip",
+-    sha256 = "296cfa57f2012c0226afbc64e9e8575fc36285d2fa31d725a176548cd173b3df",
+-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/6ece210081fb73d0ea4a5ea8e13ac9584d03fd76/ken_all.zip",
 +    path = "third_party",
  )
  
@@ -43,8 +43,8 @@
 +new_local_repository(
      name = "zip_code_jigyosyo",
      build_file_content = "exports_files([\"JIGYOSYO.CSV\"])",
--    sha256 = "0e62af72f56a3039409dc105057051df0e374c2e373a2a068172daaaa1a9af13",
--    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/ba167e0bd99ee9705e40a747c7358f425511f78a/jigyosyo.zip",
+-    sha256 = "1c56e79ff4c7f709778e0bf4dfbffdf939efd170845feccae986d22cf4373988",
+-    url = "https://github.com/hiroyuki-komatsu/japanpost_zipcode/raw/6ece210081fb73d0ea4a5ea8e13ac9584d03fd76/jigyosyo.zip",
 +    path = "third_party",
  )
 +
