Revert "change handling japanese-usage-disctionary"
This reverts commit ed258ce09424a3d22402a6cff520cf425864aff0.

--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -10,6 +10,7 @@ EXTRACT_ONLY=	${_DISTFILES:Mabseil-*} \
 		${_DISTFILES:Me-kato-*} \
 		${_DISTFILES:Mfcitx-*} \
 		${_DISTFILES:Mgoogle*} \
+		${_DISTFILES:Mhiroyuki-komatsu-*} \
 		${_DISTFILES:Mjigyosyo*} \
 		${_DISTFILES:Mken_all*} \
 		${_DISTFILES:Mprotobuf-*} \
@@ -80,8 +81,7 @@ MASTER_SITES+=	https://www.post.japanpost.jp/zipcode/dl/kogaki/zip/:kenall \
 DISTFILES+=	ken_all.zip:kenall \
 		jigyosyo.zip:jigyosyo
 # usage dictionary
-MASTER_SITES+=	https://github.com/hiroyuki-komatsu/japanese-usage-dictionary/archive/refs/tags/:udic
-DISTFILES+=	2025-01-25.tar.gz:udic
+GH_TUPLE+=	hiroyuki-komatsu:japanese-usage-dictionary:38d3462:udic/src/third_party/japanese_usage_dictionary
 
 OPTIONS_DEFINE=	UTDIC
 OPTIONS_MULTI=	UTDIC
