bazel8 from https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=287546

--- a/devel/bazel8/Makefile
+++ b/devel/bazel8/Makefile
@@ -2,6 +2,7 @@ PORTNAME=	bazel
 DISTVERSION=	8.2.1
 CATEGORIES=	devel java
 MASTER_SITES=	https://github.com/bazelbuild/${PORTNAME}/releases/download/${DISTVERSION}/
+PKGNAMESUFFIX=8
 DISTNAME=	bazel-${DISTVERSION}-dist
 
 PATCH_SITES=	https://github.com/bazelbuild/bazel/commit/
