--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mozc
 PORTVERSION=	2.31.5851.102
-PORTREVISION=	8
+PORTREVISION?=	7
 CATEGORIES=	japanese
 
 DIST_SUBDIR=	${PORTNAME}
@@ -82,6 +82,8 @@ BAZEL_COMMON_OPTS=	\
 BAZEL_WRKSRC=	${WRKSRC}/src
 
 .if ${BUILD_MOZC_LIST:Mmozc_server} == "mozc_server"
+
+PORTREVISION=	8
 
 PKGNAMEPREFIX=	ja-
 PKGNAMESUFFIX=	-server
