Update ken_all and jigyosyo

--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -83,6 +83,8 @@ BAZEL_WRKSRC=	${WRKSRC}/src
 
 .if ${BUILD_MOZC_LIST:Mmozc_server} == "mozc_server"
 
+PORTREVISION=	11
+
 PKGNAMEPREFIX=	ja-
 PKGNAMESUFFIX=	-server
 
